--- a/css/layout/main.css
+++ b/css/layout/main.css
@@ -74,7 +74,7 @@
 
 @font-face {
     font-family: "NiseSegaSonic.TTF";
-    src: url(../lista_img/NiseSegaSonic.TTF);
+    src: url(../img/NiseSegaSonic.TTF);
 }
 
 
